# app/api/openapi.yml
@@ -66,6 +66,22 @@ paths:
         '400': {$ref: '#/components/responses/ErrorResponse', description: Bad request}
         '5XX': {$ref: '#/components/responses/ErrorResponse', description: Server error}
 
+  /api/favicon:
+    get:
+      summary: Get favicon for the hostname
+      operationId: getFavicon
+      parameters:
+        - {$ref: '#/components/parameters/FaviconBaseUrlInQuery'}
+      responses:
+        '200':
+          description: Favicon image for the hostname in PNG format
+          content: {image/png: {schema: {type: string, format: binary}}}
+        '204':
+          description: Not found (no favicon found)
+          headers: {X-Error: {$ref: '#/components/headers/FaviconNoContentError'}}
+        '400': {$ref: '#/components/responses/ErrorResponse', description: Bad request}
+        '5XX': {$ref: '#/components/responses/ErrorResponse', description: Server error}
+
 components:
   headers: # ------------------------------------------------ HEADERS -------------------------------------------------
     WebSocketResponseConnection:
@@ -79,6 +95,10 @@ components:
     WebSocketResponseSecWebsocketAccept:
       description: Websocket Sec-WebSocket-Accept header
       schema: {type: string, example: nESCeAuSsDkp9fVKF/BQ9Nfev+U=, externalDocs: {url: 'https://mzl.la/4duaxwC'}}
+
+    FaviconNoContentError:
+      description: Details of the error when no favicon is found
+      schema: {type: string, example: failed to fetch favicon image (https://example.com/favicon.ico)}
 
   parameters: # --------------------------------------------- PARAMETERS ---------------------------------------------
     WebSocketRequestConnectionInHeader:
@@ -104,6 +124,12 @@ components:
       in: header
       required: true
       schema: {type: string, example: 13}
+
+    FaviconBaseUrlInQuery:
+      name: base_url
+      in: query
+      required: true
+      schema: {type: string, example: 'https://whoami.indocker.app'}
 
   responses: # ---------------------------------------------- RESPONSES -----------------------------------------------
     PingResponse:
@@ -158,8 +184,11 @@ components:
       properties:
         hostname: {type: string, example: 'whoami'}
         urls:
-          type: array
-          items: {type: string, format: uri, example: 'http://172.19.0.2:8080'}
-          minLength: 1
+          type: object
+          additionalProperties: {type: string, format: uri, example: 'http://172.19.0.2:8080'}
+          minProperties: 1
+          example:
+            769c041f8685e91cee965832d46e9bdd5dccd98e759fe8b8691440a714a4972f: http://172.19.0.2:8080
+            f16c09e38a8a4d63669ac5638708691865d9ef6a56f2e20f95a21f86c2cfc442: http://172.19.0.3:8080
       additionalProperties: false
       required: [hostname, urls]
